修改文档与函数注释，更新swag文档
