# docs/swagger.json
@@ -16,85 +16,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/message/beat": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "服务心跳重置倒计时",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "服务层"
-                ],
-                "summary": "服务心跳",
-                "parameters": [
-                    {
-                        "description": "服务实例信息",
-                        "name": "Model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.ServerModel"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "返回true或false",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ResultModel"
-                        }
-                    }
-                }
-            }
-        },
-        "/message/election": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "由领导者调用的新一轮选举接口。",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "服务层"
-                ],
-                "summary": "选举",
-                "parameters": [
-                    {
-                        "description": "领导者或非领导者服务实例信息",
-                        "name": "Model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entity.ServerModel"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "返回true或false",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ResultModel"
-                        }
-                    }
-                }
-            }
-        },
-        "/message/getLeader": {
+        "/message/follow/getLeader": {
             "post": {
                 "security": [
                     {
@@ -145,7 +67,7 @@
                 }
             }
         },
-        "/message/getServers": {
+        "/message/follow/getServers": {
             "post": {
                 "security": [
                     {
@@ -199,7 +121,7 @@
                 }
             }
         },
-        "/message/getServersNum": {
+        "/message/follow/getServersNum": {
             "post": {
                 "security": [
                     {
@@ -238,7 +160,85 @@
                 }
             }
         },
-        "/message/register": {
+        "/message/leader/beat": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "服务心跳重置倒计时",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "服务层"
+                ],
+                "summary": "服务心跳",
+                "parameters": [
+                    {
+                        "description": "服务实例信息",
+                        "name": "Model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.ServerModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回true或false",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResultModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/message/leader/election": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "由领导者调用的新一轮选举接口。",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "服务层"
+                ],
+                "summary": "选举",
+                "parameters": [
+                    {
+                        "description": "领导者或非领导者服务实例信息",
+                        "name": "Model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.ServerModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回true或false",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResultModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/message/leader/register": {
             "post": {
                 "security": [
                     {
@@ -263,7 +263,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.ServerModel"
+                            "$ref": "#/definitions/entity.RequestModel"
                         }
                     }
                 ],
@@ -277,7 +277,46 @@
                 }
             }
         },
-        "/operator/cancelDeleteInstance": {
+        "/message/manager/login": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "管理员登录接口。",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "服务层"
+                ],
+                "summary": "管理员登录",
+                "parameters": [
+                    {
+                        "description": "管理员账号密码",
+                        "name": "Model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Root"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回token",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResultModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/CURD/cancelDeleteInstance": {
             "delete": {
                 "security": [
                     {
@@ -316,7 +355,7 @@
                 }
             }
         },
-        "/operator/deleteColony": {
+        "/operator/CURD/deleteColony": {
             "delete": {
                 "security": [
                     {
@@ -355,7 +394,7 @@
                 }
             }
         },
-        "/operator/deleteInstance": {
+        "/operator/CURD/deleteInstance": {
             "delete": {
                 "security": [
                     {
@@ -394,14 +433,14 @@
                 }
             }
         },
-        "/operator/getClusterLeader": {
+        "/operator/CURD/gerNamespaces": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "由管理员调用获取中心集群领导者",
+                "description": "由管理者调用的获取当前所有服务信息。",
                 "consumes": [
                     "application/json"
                 ],
@@ -411,38 +450,10 @@
                 "tags": [
                     "管理层"
                 ],
-                "summary": "获取中心集群领导者",
+                "summary": "获取全部命名空间",
                 "responses": {
                     "200": {
-                        "description": "返回中心集群领导者名称",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ResultModel"
-                        }
-                    }
-                }
-            }
-        },
-        "/operator/getClusterStatus": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "由管理员调用获取中心当前身份状态",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "管理层"
-                ],
-                "summary": "获取中心当前身份状态",
-                "responses": {
-                    "200": {
-                        "description": "返回集群状态",
+                        "description": "返回命名空间列表名称",
                         "schema": {
                             "allOf": [
                                 {
@@ -452,7 +463,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "integer"
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            }
                                         }
                                     }
                                 }
@@ -462,7 +476,7 @@
                 }
             }
         },
-        "/operator/getDeleteInstance": {
+        "/operator/CURD/getDeleteInstances": {
             "get": {
                 "security": [
                     {
@@ -505,7 +519,7 @@
                 }
             }
         },
-        "/operator/getInstances": {
+        "/operator/CURD/getInstances": {
             "get": {
                 "security": [
                     {
@@ -525,24 +539,9 @@
                 "summary": "获取全部服务实例",
                 "responses": {
                     "200": {
-                        "description": "返回服务实例切片数组",
+                        "description": "返回服务全体封装",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/entity.ResultModel"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/entity.ServerModel"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/entity.ResultModel"
                         }
                     }
                 }
@@ -600,7 +599,75 @@
                 }
             }
         },
-        "/operator/getStatus": {
+        "/operator/cluster/getClusterLeader": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "由管理员调用获取中心集群领导者",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理层"
+                ],
+                "summary": "获取中心集群领导者",
+                "responses": {
+                    "200": {
+                        "description": "返回中心集群领导者名称",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResultModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/cluster/getClusterStatus": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "由管理员调用获取中心当前身份状态",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "管理层"
+                ],
+                "summary": "获取中心当前身份状态",
+                "responses": {
+                    "200": {
+                        "description": "返回集群状态",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/entity.ResultModel"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "integer"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/operator/cluster/getStatus": {
             "get": {
                 "security": [
                     {
@@ -786,6 +853,15 @@
                 }
             }
         },
+        "entity.RequestModel": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "root": {
+                    "$ref": "#/definitions/entity.Root"
+                }
+            }
+        },
         "entity.ResultModel": {
             "type": "object",
             "properties": {
@@ -794,6 +870,20 @@
                 },
                 "data": {},
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Root": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
@@ -817,6 +907,9 @@
                     "type": "string"
                 },
                 "time": {
+                    "type": "string"
+                },
+                "udp_port": {
                     "type": "string"
                 }
             }
