# src/router/MessageAPI.go
@@ -10,26 +10,29 @@ import (
 // @Description: MessageAPI
 // @param        r *gin.Engine
 func MessageAPI(r *gin.Engine) {
-	tx := r.Group("/v1/message")
-	tx.Use(interception.ClusterCandidateInterception())
+	//r.Use(interception.ClusterCandidateInterception()) // 拦截Candidate状态
+
+	//允许Leader请求
+	txLeader := r.Group("/v1/message/leader")
+	txLeader.Use(interception.ClusterFollowInterception())
 	{
 		//	/v1/message/register		服务注册
-		tx.POST("/register", interception.ClusterFollowInterception(),
-			controller.RegisterController)
+		txLeader.POST("/register", controller.RegisterController)
 		//  /v1/message/beat			心跳
-		tx.PUT("/beat", interception.ClusterFollowInterception(),
-			controller.HeartBeatController)
+		txLeader.PUT("/beat", controller.HeartBeatController)
 		//  /v1/message/election		服务调用开启选举
-		tx.PUT("/election", interception.ClusterFollowInterception(),
-			controller.ElectionController)
+		txLeader.PUT("/election", controller.ElectionController)
+	}
+
+	//允许Follow请求
+	txFollow := r.Group("/v1/message/follow")
+	txFollow.Use(interception.ClusterLeaderInterception())
+	{
 		// /v1/message/getLeader		获取当前Leader
-		tx.POST("/getLeader", interception.ClusterLeaderInterception(),
-			controller.GetLeaderController)
+		txFollow.POST("/getLeader", controller.GetLeaderController)
 		// /v1/message/getServers		获取除Leader外其他服务
-		tx.POST("/getServers", interception.ClusterLeaderInterception(),
-			controller.GetServersController)
+		txFollow.POST("/getServers", controller.GetServersController)
 		// /v1/message/getServersNum	获取当前集群服务数量
-		tx.POST("/getServersNum", interception.ClusterLeaderInterception(),
-			controller.GetServersNumController)
+		txFollow.POST("/getServersNum", controller.GetServersNumController)
 	}
 }
