# src/swag/entity/ResultModel.go
@@ -11,27 +11,3 @@ type ResultModel struct {
 	Message string      `json:"message"`
 	Data    interface{} `json:"data"`
 }
-
-// NewSuccessResult
-// @Description: 返回成功的结果
-// @param        data 返回的数据
-// @return       *ResultModel 返回的结果
-func NewSuccessResult(data interface{}) *ResultModel {
-	return &ResultModel{
-		Code: Success,
-		Data: data,
-	}
-}
-
-// NewFalseResult
-// @Description: 返回失败的结果
-// @param        data    返回的数据
-// @param        SyncMessage 返回的消息
-// @return       *ResultModel 返回的结果
-func NewFalseResult(data interface{}, Message string) *ResultModel {
-	return &ResultModel{
-		Code:    False,
-		Data:    data,
-		Message: Message,
-	}
-}
